--- a/style.css
+++ b/style.css
@@ -6,3 +6,125 @@
   font-family: 'Open Sans', sans-serif;
 }
 
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: #4f1271;
+}
+
+.wrapper {
+  width: 380px;
+  padding: 40px 30px 50px 30px;
+  border-radius: 5px;
+  background: #fcfcfc;
+  text-align: center;
+}
+
+.wrapper header {
+  font-size: 35px;
+  font-weight: 600;
+}
+
+.wrapper form {
+  margin: 40px 0;
+}
+
+form .field {
+  width: 100%;
+  margin-bottom: 20px;
+}
+form .field.shake {
+  animation: shake 0.3s ease-in-out infinite;
+}
+
+@keyframes shake {
+  0%,
+  100% {
+    margin-left: 0;
+  }
+  20%,
+  80% {
+    margin-left: -12px;
+  }
+  40%,
+  60% {
+    margin-left: 12px;
+  }
+}
+
+form .field .input-area {
+  position: relative;
+}
+
+form input {
+  height: 50px;
+  width: 100%;
+  padding: 0 45px;
+  outline: none;
+  font-size: 18px;
+  border-radius: 5px;
+  border-bottom-width: 2px;
+  border: 1px solid #bfbfbf;
+}
+
+form input::placeholder {
+  color: #bfbfbf;
+  font-size: 17px;
+}
+
+form .field i {
+  position: absolute;
+  top: 50%;
+  font-size: 18px;
+  pointer-events: none;
+  transform: translateY(-50%);
+}
+
+form .field .icon {
+  left: 15px;
+  color: #bfbfbf;
+}
+
+form .field .error-icon {
+  right: 15px;
+  color: #dc3545;
+}
+
+form .field .error-txt {
+  margin-top: 5px;
+  color: #dc3545;
+  text-align: left;
+}
+
+form .field .error {
+  display: none;
+}
+
+form .pass-link {
+  text-align: left;
+  margin-top: -10px;
+}
+
+.wrapper a {
+  color: #4f1271;
+  text-decoration: none;
+}
+
+.wrapper a:hover {
+  text-decoration: underline;
+}
+
+form input[type='submit'] {
+  margin-top: 30px;
+  border: none;
+  color: #fcfcfc;
+  cursor: pointer;
+  background: #4f1271;
+  transition: background 0.2s ease;
+}
+
+input[type='submit']:hover {
+  background: #783f8e;
+}
