completed login form

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ form .field {
   margin-bottom: 20px;
 }
 form .field.shake {
-  animation: shake 0.3s ease-in-out infinite;
+  animation: shake 0.3s ease-in-out;
 }
 
 @keyframes shake {
@@ -67,6 +67,10 @@ form input {
   border-radius: 5px;
   border-bottom-width: 2px;
   border: 1px solid #bfbfbf;
+}
+
+form .field.error input {
+  border-color: #dc3545;
 }
 
 form input::placeholder {
@@ -100,6 +104,13 @@ form .field .error-txt {
 
 form .field .error {
   display: none;
+}
+
+form .field .error {
+  display: none;
+}
+form .field.error .error {
+  display: block;
 }
 
 form .pass-link {
